update transactions